--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -54,14 +54,39 @@ header {
 
 .heading figure img {
   height: 40px;
-  width: 40px;
 }
 
+
+
 .search-movie{
-  display: flex;
- padding: 10px 50px;
-  background-color: red;
+ padding: 5px 10px 5px 15px ;
+  border: 2px solid #fff;
   border-radius: 20px;
+}
+
+.search-movie input {
+  background: none;
+  color: var(--app-white);
+  height: 25px;
+  font-size: 17px;
+  color: var(--app-white);
+}
+
+.search-movie input::placeholder {
+  color: rgb(255,255,255,0.7);
+}
+
+.search-movie button {
+  height: 25px;
+  padding: 0 10px;
+  background: none;
+  font-size: 17px;
+  color: var(--app-white);
+  border-radius: 20px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-left: 5px;
+  font-weight: 600;
 }
 
 nav ul{
@@ -79,8 +104,29 @@ nav ul li + li {
 nav ul li a {
   text-decoration: none;
   color: var(--app-white);
-  font-size: 18px;
+  font-size: 19px;
   text-transform: uppercase;
+  position: relative;
+  transition: color 0.3s;
+}
+
+nav a:before {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: #fff;
+  transition: width 0.3s;
+}
+
+nav a:hover {
+  color: #fff; 
+}
+
+nav a:hover:before {
+  width: 100%;
 }
 
 .bar-icon {
