--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,17 +51,14 @@ header {
   color: var(--app-white);
 }
 
-
 .heading figure img {
   height: 40px;
 }
 
-
-
-.search-movie{
- padding: 5px 10px 5px 15px ;
+.search-movie {
+  padding: 5px 10px 5px 15px;
   border: 2px solid #fff;
-  border-radius: 20px;
+  border-radius: 5px;
 }
 
 .search-movie input {
@@ -73,7 +70,7 @@ header {
 }
 
 .search-movie input::placeholder {
-  color: rgb(255,255,255,0.7);
+  color: rgb(255, 255, 255, 0.7);
 }
 
 .search-movie button {
@@ -89,7 +86,7 @@ header {
   font-weight: 600;
 }
 
-nav ul{
+nav ul {
   display: flex;
 }
 
@@ -111,7 +108,7 @@ nav ul li a {
 }
 
 nav a:before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -2px;
   left: 0;
@@ -122,7 +119,7 @@ nav a:before {
 }
 
 nav a:hover {
-  color: #fff; 
+  color: #fff;
 }
 
 nav a:hover:before {
@@ -131,4 +128,244 @@ nav a:hover:before {
 
 .bar-icon {
   display: none;
+}
+
+footer {
+  height: 60px;
+  background-color: var(--app-blue);
+  line-height: 60px;
+  margin-top: 20px;
+}
+
+.query,
+.copyright {
+  font-size: 19px;
+  color: #fff;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 35px 21px;
+}
+
+.grid-item {
+  height: 330px;
+  border-radius: 5px;
+}
+
+.grid-item figure img {
+  height: 300px;
+  border-radius: 5px;
+  box-shadow: 0 0.5px 8px rgba(255, 255, 255, 0.3);
+}
+
+.grid-item .description {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5px;
+  font-size: 18px;
+  color: var(--app-white);
+}
+
+.catalog-header {
+  display: flex;
+  justify-content: space-between;
+  margin: 25px 0;
+}
+
+.catalog-header h2 {
+  color: var(--app-white);
+  letter-spacing: 1.2px;
+  font-size: 27px;
+}
+
+.catalog-header button {
+  background-color: var(--app-green);
+  color: var(--app-white);
+  border-radius: 5px;
+  font-size: 18px;
+  padding: 0 10px;
+}
+
+.not-found {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  background: linear-gradient(-45deg, #5f748b, #1c2130, #1c2748);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+  font-family: 'Inconsolata', monospace;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.ghost img {
+  height: 350px;
+  animation: floaty 1.8s infinite alternate;
+}
+
+@keyframes floaty{
+  0%{
+      transform: translateY(0);
+  }
+  100%{
+      transform: translateY(15px);
+  }
+}
+
+.shadow{
+  width: 250px;
+  height: 30px;
+  background-color: rgba(187, 189, 202, 0.16);
+  margin: 0 auto;
+  border-radius: 50%;
+  filter: blur(7px);
+  animation: floaty 1.8s infinite alternate;
+}
+
+
+.ghost-flex {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.content {
+  color: var(--app-white);
+}
+
+.content .error {
+  font-size: 25px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
+.content .hello {
+  font-size: 80px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
+.content .message {
+  font-size: 30px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
+.content .home {
+  margin-top: 25px;
+  height: 35px;
+  padding: 0 25px;
+  background: var(--app-blue);
+  font-size: 21px;
+  color: var(--app-white);
+  border-radius: 5px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 600;
+}
+
+.form-container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form {
+  background-color: #f1f2f3;
+  width: 450px;
+  padding: 15px 10px;
+  border-radius: 5px;
+
+}
+
+form h2 {
+  text-align: center;
+  font-size: 28px;
+  color: var(--app-blue);
+}
+
+form label {
+  display: block;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+form .inputs {
+  margin-bottom: 18px;
+}
+
+form input[type=text], input[type=number] {
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  background: none;
+  height: 40px;
+  width: 100%;
+  padding: 0 15px;
+  font-size: 17px;
+  border-radius: 5px;
+}
+
+form input[type=text]:focus, input[type=number]:focus {
+  border: 1px solid rgb(0 0 0 );
+
+}
+
+form .button {
+  display: block;
+  width: 100px;
+  height: 40px;
+  text-align: center;
+  background-color: #1414ff;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 0.2px;
+  color: #fff;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+
+form .button:disabled {
+  background-color: #6666ea;
+  cursor: not-allowed;
+}
+
+.detail-main {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
+.detail {
+  height: 350px;
+  width: 750px;
+  background-color: #00a86b;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.detail figure {
+  width: 100%;
+  height: 100%;
+  background-color: #1414ff;
+}
+
+.detail-content {
+  width: 100%;
+  height: 100%;
+  background-color: #ff2846;
 }
