--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 :root {
   --app-dark-bg: #1a1d28;
-  --app-green: #00a86b;
-  --app-green-hover: #3b9650;
+  --app-green: #009266;
+  --app-green-hover: #018554;
   --app-purple: #833cff;
   --app-orange: #ff833c;
   --app-blue: #3c57ff;
@@ -26,7 +26,7 @@ body {
 }
 
 .catalog-main {
-  margin:  35px;
+  margin: 35px;
 }
 
 header {
@@ -106,6 +106,8 @@ nav ul li a {
   text-decoration: none;
   color: var(--app-white);
   font-size: 19px;
+  letter-spacing: 1.1px;
+  font-weight: 600;
   text-transform: uppercase;
   position: relative;
   transition: color 0.3s;
@@ -136,6 +138,8 @@ nav a:hover:before {
 
 .bar-icon {
   display: none;
+  font-size: 23px;
+  color: var(--app-white);
 }
 
 footer {
@@ -143,6 +147,13 @@ footer {
   background-color: var(--app-blue);
   line-height: 60px;
 }
+
+.footer-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 
 .query,
 .copyright {
@@ -153,7 +164,8 @@ footer {
 .grid-container {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 35px 21px;
+  justify-items: center;
+  grid-gap: 40px 21px;
 }
 
 .grid-item {
@@ -185,15 +197,25 @@ footer {
 .catalog-header h2 {
   color: var(--app-white);
   letter-spacing: 1.2px;
-  font-size: 27px;
+  font-size: 28px;
 }
 
 .catalog-header button {
   background-color: var(--app-green);
   color: var(--app-white);
   border-radius: 5px;
-  font-size: 18px;
+  font-size: 15px;
+  height: 35px;
+  width: 19 0px;
   padding: 0 10px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
+  font-weight: 600;
+}
+
+.catalog-header button:hover {
+  background-color: var(--app-green-hover);
 }
 
 .not-found {
@@ -359,30 +381,32 @@ form .button:disabled {
   height: 350px;
   width: 900px;
   display: flex;
-  align-items: center;
+  justify-content: space-evenly;
 }
 
 .detail figure {
-  width: 35%;
-  height: 100%;
-  justify-content: center;
+  width: 270px;
   display: flex;
+  justify-content: center;
 }
 
 .detail figure img {
-  height: 350px;
   border-radius: 5px;
+  height: 350px;
   box-shadow: 0 0.5px 8px rgba(255, 255, 255, 0.3);
 }
 
 .detail-content {
-  width: 65%;
-  height: 100%;
+  width: 630px;
+  height: 350px;
   color: #fff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .detail-content .title {
-  font-size: 40px;
+  font-size: 45px;
   font-weight: 800;
 }
 
@@ -390,11 +414,70 @@ form .button:disabled {
   margin-top: 15px;
 }
 
-span {
-  font-size: 20px;
+.detail-content p {
+  font-size: 19px;
+  font-weight: 600;
+  letter-spacing: 1.2px;
 }
 
-.detail-content p {
-  font-size: 20px;
-  font-weight: 60;
+@media (max-width: 996px) {
+  .grid-container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 776px) {
+  .grid-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .detail {
+    display: block;
+  }
+  
+  .search-movie {
+    display: none;
+  }
+
+  nav {
+    display: none;
+  }
+
+  .bar-icon {
+    display: block;
+  }
+
+  .catalog-header {
+    justify-content: center;
+  }
+
+  .catalog-header h2 {
+    display: none;
+  }
+
+  .footer-flex{
+    justify-content: center;
+  }
+  footer .copyright {
+    display: none;
+  }
+}
+
+@media (max-width: 556px) {
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px 30px;
+  }
+
+  .ghost-flex {
+    display: block;
+  }
+
+
+}
+
+@media (max-width: 446px) {
+  .grid-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
