--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -154,7 +154,6 @@ footer {
   align-items: center;
 }
 
-
 .query,
 .copyright {
   font-size: 19px;
@@ -165,11 +164,12 @@ footer {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   justify-items: center;
-  grid-gap: 40px 21px;
+  grid-gap: 25px 25px;
 }
 
 .grid-item {
   height: 330px;
+  width: 200px;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -177,15 +177,22 @@ footer {
 .grid-item figure img {
   height: 300px;
   border-radius: 5px;
-  box-shadow: 0 0.5px 8px rgba(255, 255, 255, 0.3);
+  background-color: #009266;
+  box-shadow: rgb(0 0 0 / 0.4) 0px 26px 30px -10px,
+    rgb(0 0 0 / 0.4) 0px 16px 10px -10px;
 }
 
 .grid-item .description {
-  display: flex;
-  justify-content: space-between;
   margin-top: 5px;
+  width: 100%;
+}
+
+.grid-item .description .title {
   font-size: 18px;
   color: var(--app-white);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .catalog-header {
@@ -314,8 +321,8 @@ footer {
 
 form {
   background-color: #f1f2f3;
-  width: 450px;
-  padding: 15px 10px;
+  width: 400px;
+  padding: 15px 20px;
   border-radius: 5px;
 }
 
@@ -379,7 +386,7 @@ form .button:disabled {
 
 .detail {
   height: 350px;
-  width: 900px;
+  width: 1100px;
   display: flex;
   justify-content: space-evenly;
 }
@@ -393,20 +400,21 @@ form .button:disabled {
 .detail figure img {
   border-radius: 5px;
   height: 350px;
-  box-shadow: 0 0.5px 8px rgba(255, 255, 255, 0.3);
+  box-shadow: rgb(0 0 0 / 0.4) 0px 26px 30px -10px,
+    rgb(0 0 0 / 0.4) 0px 16px 10px -10px;
 }
 
 .detail-content {
-  width: 630px;
+  width: 780px;
+  padding: 0 15px;
   height: 350px;
   color: #fff;
   display: flex;
-  justify-content: center;
   flex-direction: column;
 }
 
 .detail-content .title {
-  font-size: 45px;
+  font-size: 42px;
   font-weight: 800;
 }
 
@@ -434,7 +442,7 @@ form .button:disabled {
   .detail {
     display: block;
   }
-  
+
   .search-movie {
     display: none;
   }
@@ -455,7 +463,7 @@ form .button:disabled {
     display: none;
   }
 
-  .footer-flex{
+  .footer-flex {
     justify-content: center;
   }
   footer .copyright {
@@ -472,8 +480,6 @@ form .button:disabled {
   .ghost-flex {
     display: block;
   }
-
-
 }
 
 @media (max-width: 446px) {
