--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -324,6 +324,8 @@ form {
   width: 400px;
   padding: 15px 20px;
   border-radius: 5px;
+  box-shadow: rgb(0 0 0 / 0.4) 0px 26px 30px -10px,
+    rgb(0 0 0 / 0.4) 0px 16px 10px -10px;
 }
 
 form h2 {
